--- a/style.css
+++ b/style.css
@@ -29,12 +29,7 @@
     --form-field-background: white;
 }
 
-:focus-visible {
-    outline: 3px solid #AD0000;
-    outline-offset: 2px;
-}
-
-@media (prefers-color-scheme: dark){
+@media (prefers-color-scheme: dark) {
     :root {
         --primary: #D3CEC1;
         --form-field-background: var(--primary);
@@ -42,9 +37,6 @@
         --link: #8D8C8C;
         --background: #111;
         --dark-primary: var(--background);
-    }
-    :focus-visible {
-        outline: 3px solid #FF7A7A;
     }
 }
 
@@ -146,15 +138,13 @@ img {
     border-radius: 1rem;
 }
 
-a {
-    display: inline;
-    text-decoration: underline;
-    text-decoration-thickness: 2px;
-    text-underline-offset: 1.5px;
-    text-decoration-skip: all;
-    text-decoration-color: grey;
-    color: var(--primary);
-    transition: color .2s ease;
+h1,h2 {
+    font-family: var(--heading);
+    font-size: var(--heading-1);
+    font-weight: 400;
+    font-style: normal;
+    line-height: 1.1;
+    word-spacing: -.25rem;
 }
 
 a {
@@ -169,9 +159,7 @@ a {
 }
 
 @media (hover:hover) and (pointer:fine) {
-    a:hover,
-    a:focus,
-    a:active {
+    a:hover {
         color: var(--accent);
     }
 }
@@ -180,13 +168,13 @@ a {
     text-decoration: none;
 }
 
-h1,h2 {
-    font-family: var(--heading);
-    font-size: var(--heading-1);
-    font-weight: 400;
-    font-style: normal;
-    line-height: 1.1;
-    word-spacing: -.25rem;
+a:focus-visible,
+button:focus-visible,
+[role="button"]:focus-visible,
+input:focus-visible {
+    outline: 3px solid var(--accent);
+    outline-offset: 3px;
+    border-radius: .25rem;
 }
 
 hr {
