Add page, audio for max sheridan performances, remove  audio player icon currenColor from script, HTML

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@
     --dark-primary: var(--primary);
     --accent: #AD0000;
     --link: #8D8C8C;
-    --background: floralwhite;
+    --background: #FFFAF0;
     --form-field-background: white;
 }
 
