--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     --big-gap: 2rem;
     --max-width: 50ch;
     --body: 'G2 Erika', sans-serif, system-ui;
-    --paragraph: calc(1.175rem + .35vw);
+    --paragraph: calc(1.22rem + .35vw);
     --heading: 'Mono 45 Headline', monospace;
     --heading-1: calc(1.75rem + .7vw);
     --primary: #111;
@@ -75,7 +75,7 @@ body {
     align-content: center;
     min-height: 100vh;
     min-height: 100dvh;
-    padding: 0 1rem;
+    padding: 0 2rem;
     font-family: var(--body);
     font-size: var(--paragraph);
     font-weight: 400;
@@ -96,7 +96,7 @@ header {
     z-index: 4;
     width: 100%;
     height: 4rem;
-    padding: 0 1rem;
+    padding: 0 2rem;
     border-bottom: 2px solid var(--primary);
     background-color: var(--background);
 }
@@ -190,7 +190,7 @@ hr {
     display: flex;
     justify-content: center;
     width: 100%;
-    max-width: 41rem;
+    max-width: var(--max-width);
     margin: 0 auto;
     padding-bottom: 9rem;
     display: none; /*not active*/
@@ -211,7 +211,7 @@ footer {
     bottom: 0;
     width: 100%;
     height: 4rem;
-    padding: 0 1rem;
+    padding: 0 2rem;
     border-top: 2px solid var(--primary);
     background-color: var(--background);
 }
@@ -242,6 +242,12 @@ footer {
     width: auto;
     height: calc(var(--paragraph) * .6);
     padding-left: 2px;
+}
+
+.thin-space {
+    display: inline-block;
+    width: 2px;
+    
 }
 
 .error-message {
