Normalize page layout > remove acme wrapper

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,6 +48,7 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
+    list-style: none;
     overscroll-behavior: none;
 }
 
@@ -104,13 +105,19 @@ nav a.active {
     color: var(--accent);
 }
 
-.acme-content-wrapper {
+main {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex: 1;
     max-width:var(--max-width);
     margin: 0 auto;
     padding: 9rem 0;
 }
 
 article > * + *,
+.utility > * + *,
 h1 + p {
     margin-block-start: var(--space-0);
 }
@@ -183,6 +190,7 @@ input:focus-visible {
 
 hr {
     height: 1px;
+    width: 100%;
     margin-block-start: var(--space-1);
     margin-block-end: var(--space-1);
     background: var(--accent);
@@ -294,7 +302,7 @@ footer {
 }
 
 @media (max-width: 768px) {
-    body:not(.utility) {
+    main:not(.utility) {
         justify-content: flex-start;
     }
 }
